# xlrest

./: CMakeLists.txt  Readme.md  xlrest.sln
lib/: async.xlsm  launch.bat  xlrest.json
src/: Config.cpp  Config.h  Declarations.h  HttpServer.cpp  HttpServer.h  JsonObject.cpp  JsonObject.h  Log.cpp  Log.h  Operation.cpp  Operation.h  Parameter.cpp  Parameter.h  Server.cpp  Server.h  Stat.cpp  Stat.h  Timeout.cpp  Timeout.h  XlOperTable.cpp  XlOperTable.h  dllmain.cpp  main.vcxproj  stdafx.cpp  xlcall.cpp  xlcall.h
test/: stdafx.cpp  test.vcxproj  unittest1.cpp
